--- a/src/components/Controls/Controls.module.css
+++ b/src/components/Controls/Controls.module.css
@@ -14,44 +14,47 @@
 }
 
 .dPadBtn {
-  background-color: #222;
+  background: linear-gradient(145deg, #2a2a2a, #1a1a1a);
   position: absolute;
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
-  border: 5px solid #333;
+  box-shadow: 0 3px 0 #111;
+  border: none;
+  transition: all 0.1s ease-in-out;
+  border-bottom: 4px solid #111;
 }
 
 .dPadBtn:active {
-  background-color: #555;
-}
-
-.up,
-.down {
-  width: 30px;
-  height: 90px;
-  left: 30px;
-}
-
-.left,
-.right {
-  width: 90px;
-  height: 30px;
-  top: 30px;
+  background-color: #444;
+  transform: translateY(3px);
+  border-bottom: 0;
+  box-shadow: none;
 }
 
 .up {
   top: 0;
+  left: 30px;
+  width: 30px;
+  height: 30px;
   border-radius: 5px 5px 0 0;
 }
 .down {
   bottom: 0;
+  left: 30px;
+  width: 30px;
+  height: 30px;
   border-radius: 0 0 5px 5px;
 }
 .left {
   left: 0;
+  top: 30px;
+  width: 30px;
+  height: 30px;
   border-radius: 5px 0 0 5px;
 }
 .right {
   right: 0;
+  top: 30px;
+  width: 30px;
+  height: 30px;
   border-radius: 0 5px 5px 0;
 }
 
@@ -59,9 +62,11 @@
   position: absolute;
   width: 30px;
   height: 30px;
-  background: #222;
+  background: linear-gradient(145deg, #2a2a2a, #1a1a1a);
   top: 30px;
   left: 30px;
+  border-bottom: 4px solid linear-gradient(145deg, #2a2a2a, #1a1a1a);
+  box-shadow: 0 3px 0 #111;
 }
 
 /* A/B Buttons */
@@ -70,27 +75,26 @@
   right: 30px;
   top: 70px;
   width: 120px;
-  transform: rotate(-30deg);
 }
 
 .button {
+  all: unset;
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #830344;
+  background-color: #8a2d40;
   color: white;
   font-family: "Press Start 2P", sans-serif;
   font-size: 16px;
   text-align: center;
   line-height: 51px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
-  border: 1.5px #d05084 solid;
-  cursor: pointer;
+  border-bottom: 4px solid #562729;
 }
 
 .button:active {
-  transform: scale(0.95);
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+  transform: translateY(3px);
+  border-bottom: 0;
+  box-shadow: none;
 }
 
 .aButton {
@@ -121,10 +125,14 @@
   font-size: 8px;
   text-align: center;
   line-height: 20px;
-  cursor: pointer;
+
+  border-bottom: 4px solid #222;
+  box-shadow: 0 3px 0 #222;
 }
 
 .selectButton:active,
 .startButton:active {
-  background: #777;
+  transform: translateY(2px);
+  border-bottom: 0;
+  box-shadow: none;
 }
