--- a/src/components/Help/Help.module.css
+++ b/src/components/Help/Help.module.css
@@ -7,6 +7,15 @@
   align-items: center;
   justify-content: center;
   padding: 20px;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.7);
   border-radius: var(--small-border-radius);
+  z-index: 999;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  width: 100%;
 }
