--- a/src/components/Screen/Screen.module.css
+++ b/src/components/Screen/Screen.module.css
@@ -1,16 +1,18 @@
 .deviceScreen {
   position: relative;
-  width: 100%;
+  width: 400px;
   height: 100%;
   background-color: #5b6e5b;
-  border: 1px solid #ccc;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-  overflow: hidden;
+  overflow: break-word;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: "Press Start 2P", sans-serif;
   color: black;
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .deviceScreen::after {
@@ -27,17 +29,4 @@
   background-size: 100% 4px;
   opacity: 0.1;
   pointer-events: none;
-}
-
-.screenContent {
-  text-align: center;
-}
-
-.screenContent h1 {
-  font-size: 1.2em;
-  margin-bottom: 10px;
-}
-
-.screenContent p {
-  font-size: 0.8em;
 }
