style: 모바일 디바이스 화면에 대응하게끔 레이아웃 수정

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  max-width: 1440px;
   height: 100%;
   justify-content: center;
   align-items: center;
@@ -11,4 +11,9 @@
   position: absolute;
   right: 20px;
   top: 20px;
+}
+
+.questionIcon:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
