--- a/src/components/Controls/Controls.module.css
+++ b/src/components/Controls/Controls.module.css
@@ -114,6 +114,53 @@
   gap: 15px;
 }
 
+@media (max-width: 320px) {
+  .dPad {
+    left: 5vw;
+    top: 10vw;
+    width: 20vw;
+    height: 20vw;
+  }
+
+  .dPadBtn {
+    width: 6.66vw;
+    height: 6.66vw;
+  }
+
+  .up {
+    left: 6.66vw;
+  }
+  .down {
+    left: 6.66vw;
+  }
+  .left {
+    top: 6.66vw;
+  }
+  .right {
+    top: 6.66vw;
+  }
+
+  .dPadCenter {
+    width: 6.66vw;
+    height: 6.66vw;
+    top: 6.66vw;
+    left: 6.66vw;
+  }
+
+  .abButtons {
+    right: 5vw;
+    top: 15vw;
+    width: 25vw;
+  }
+
+  .button {
+    width: 10vw;
+    height: 10vw;
+    font-size: 3vw;
+    line-height: 10vw;
+  }
+}
+
 .selectButton,
 .startButton {
   width: 70px;
