--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,15 +1,16 @@
 .container {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
-  font-size: 1rem;
+  text-align: center;
+  padding: 10px;
+  font-size: 0.8rem;
   gap: 10px;
-  background-color: var(--background-color);
   width: 100%;
+  min-width: 400px;
 }
 
 .iconContainer {
