--- a/src/components/Screen/Screen.module.css
+++ b/src/components/Screen/Screen.module.css
@@ -1,6 +1,6 @@
 .deviceScreen {
   position: relative;
-  width: 400px;
+  width: 100%;
   height: 100%;
   background-color: #5b6e5b;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
